--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 #container {
-    margin: 100px;
+    display: grid;
+    grid-template-columns: repeat(16, 1fr);
+    grid-auto-rows:minmax(50px, auto);
+    width: 0px;
+}
+margin: 100px;
     width: 1000px;
     height: 1000px;
-}
+
