--- a/style.css
+++ b/style.css
@@ -4,7 +4,17 @@
     grid-auto-rows:minmax(50px, auto);
     width: 0px;
 }
-margin: 100px;
-    width: 1000px;
-    height: 1000px;
 
+
+
+.square {
+border: solid 1px;
+padding : 20px 20px;
+width : 20px;
+display : inline-block;
+}
+
+.hoverSquare {
+    background-color: black;
+    transition:500ms;
+}
