--- a/style.css
+++ b/style.css
@@ -1,16 +1,22 @@
-#container {
+#gridContainer {
+    display:flex;
+    justify-content: center;
+    margin: 20px;
+    
+}
+
+#grid {
     display: grid;
-    grid-template-columns: repeat(16, 1fr);
-    grid-auto-rows:minmax(50px, auto);
-    width: 0px;
+    grid-auto-rows:minmax(auto);
+    justify-content: center;
+    width: 960px;
+    height: 800px;
 }
 
 
 
 .square {
 border: solid 1px;
-padding : 20px 20px;
-width : 20px;
 display : inline-block;
 }
 
